# StokesianDynamics

./: CMakeLists.txt  LICENSE  Lubrication_Class.cpp  README.md  TestCppClass.py  debug_positions.npz  environment.yml  pyproject.toml
Resistance_Coefs/: DP_case_mob_scalars_channel_H1p5_Extrap_L32.txt  DP_case_mob_scalars_channel_H1p5_Extrap_L32_eig_thresh.txt  DP_case_mob_scalars_channel_H5ovr4p5a_L32_eig_thresh.txt  DP_case_res_scalars_channel_H1p5_Extrap_L32.txt  DP_case_res_scalars_channel_H5ovr4p5a_Extrap_L32.txt  DP_case_res_scalars_channel_H5ovr4p5a_FCM_L32.txt  Error_eig_thresh_1xL.txt  Error_scalars_channel_H1p5_Extrap_L32_eig_thresh.txt  Wall_Resist_New_Compare.m  aka_new_eig_thresh.txt  aka_new_mob_scalars_wall_MB_2562_eig_thresh.txt  checkDP_case_res_scalars_channel_H5ovr4p5a_Extrap_L32.txt
examples/: ladder_to_ring_EM_force.py
examples/EM_Ring_Formation/: ladder_to_ring_EM_force.py
examples/Mag_Nano_Particles/: magnetic_microrollers_perm.py  magnetic_suspension_perm.py
lubrication_coef_utils/: check_pair_scalars.py  chimera_wall_scalars.py  file_fit_wall_sup_scalars.py  find_fit_discontinuities.py  find_fit_roots_and_poles.py  find_fit_singularities.py  fit_deltaR_wall_scalars.py  fit_deltaR_wall_scalars_corrected.py  fit_rpy_wall_scalars.py  fit_wall_sup_scalars.py  pair_mb_scalar_fits.txt  pair_sup_scalar_fits_and_cutoffs_higher_order.txt  plot_pair_blob_scalars.py  plot_pair_lub_scalars.py  plot_wall_sup_scalars.py  rpy_wall_scalar_fits.txt  rpy_wall_scalar_fits_corrected.txt  test_pair_lub_fit.py  test_wall_scalars.py  test_wall_scalars_new.py  wall_deltaR_scalar_fits.txt  wall_deltaR_scalar_fits_corrected.txt  wall_sup_scalar_fits.txt
resistance_coeffs/: DP_case_mob_scalars_channel_H5ovr4p5a_Extrap_L32_eig_thresh.txt  DP_case_mob_scalars_channel_H6a_Extrap_L32.txt  DP_case_mob_scalars_wall_MB_2562_eig_thresh_1xL.txt  DP_case_res_scalars_wall_MB_2xL.txt  DP_case_res_scalars_wall_MB_3xL.txt  aka_new_res_scalars_wall_MB.txt  aka_new_res_scalars_wall_MB_2562.txt  aka_new_res_scalars_wall_MB_2562_eig_thresh.txt
src/: __init__.py  body.py  cholesky_solver.py  cupyStokesianDynamics.py  lubrication.cpp  lubrication_cupy.py  lubrication_numba.py  lubrication_old_pair_resist.cpp  lubrication_pair_fit.cpp  profile_lubrication_cupy.py  pyStokesianDynamics.py
src/__pycache__/: lubrication_numba._assemble_pair-305.py314.1.nbc  lubrication_numba._assemble_pair-305.py314.nbi  lubrication_numba._asym_wall-216.py314.1.nbc  lubrication_numba._asym_wall-216.py314.nbi  lubrication_numba._delta_R_wall-232.py314.1.nbc  lubrication_numba._delta_R_wall-232.py314.nbi  lubrication_numba._eval_PQ_pair-248.py314.1.nbc  lubrication_numba._eval_PQ_pair-248.py314.nbi  lubrication_numba._eval_pair_mb-377.py314.1.nbc  lubrication_numba._eval_pair_mb-377.py314.nbi  lubrication_numba._eval_pair_sup-343.py314.1.nbc  lubrication_numba._eval_pair_sup-343.py314.nbi  lubrication_numba._eval_wall_rat-191.py314.1.nbc  lubrication_numba._eval_wall_rat-191.py314.nbi  lubrication_numba._resist_csc_kernel-403.py314.1.nbc  lubrication_numba._resist_csc_kernel-403.py314.nbi  lubrication_numba._rpy_wall-208.py314.1.nbc  lubrication_numba._rpy_wall-208.py314.2.nbc  lubrication_numba._rpy_wall-208.py314.3.nbc  lubrication_numba._rpy_wall-208.py314.4.nbc  lubrication_numba._rpy_wall-208.py314.5.nbc  lubrication_numba._rpy_wall-208.py314.6.nbc  lubrication_numba._rpy_wall-208.py314.nbi  lubrication_numba._wall_delta_matrix-280.py314.1.nbc  lubrication_numba._wall_delta_matrix-280.py314.nbi  lubrication_numba._wall_rpy_matrix-258.py314.1.nbc  lubrication_numba._wall_rpy_matrix-258.py314.nbi
tests/: Delta_R_test.npz  check_deltaR_eigenvalues.py  msd_phi0.66_L160x160.npz  pair_sup_scalar_fits_and_cutoffs.txt  profile_trap_components.py  profile_trap_components_cupy.py  test_cholesky_solver.py  test_cpp_class.py  test_deltaR_spd.py  test_fluctuating_dynamics.py  test_fluctuating_dynamics_open.py  test_numba_cupy_cpp.py  test_numba_vs_cpp.py  test_pair_spd.py  test_pyStokesianDynamics.py  test_wall_deltaR_positivity.py  tetra_lub_mobility_test.py
tests/Tet_Data/: mob_plot.m~
