[build-system]
requires = [
    "scikit-build-core>=0.5.0",
    "nanobind>=2.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "Lubrication"
version = "1.0.0"
description = "Lubrication corrections for rigid body hydrodynamics via nanobind"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
]

[tool.scikit-build]
# Tell scikit-build-core where the CMakeLists.txt lives
cmake.build-type = "Release"
wheel.packages = []     # no pure-Python packages, extension only

[tool.scikit-build.cmake.define]
DOUBLEPRECISION = "0"

# Pass the install prefix so CMakeLists can resolve Python_SITEARCH correctly
CMAKE_INSTALL_PREFIX = ""